--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 **/.ssh/id_rsa**
 **/terraform.tfstate
 **/../terraform.tfstate
-**/terraform.tfstate.backup/
+**/terraform.tfstate.backup
 **/.terraform.tfstate.lock.info
 **/.ssh/known_hosts
 **/.terraform.lock.hcl
