--- a/istio/labs/hello_world_deployment_istio_ingress/6-gateway.yaml
+++ b/istio/labs/hello_world_deployment_istio_ingress/6-gateway.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: istio-system
 spec:
   selector:
-    istio: ingress # use istio default controller
+    istio: ingressgateway # use istio default controller
   servers:
   - port:
       number: 80
