--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,8 @@
 **/.ssh/known_hosts
 **/.terraform.lock.hcl
 **/istio_addons/
-**/vm_workload_config/
+**/cluster.env
+**/istio-token
+**/hosts
+**/mesh.yaml
+**/root-cert.pem
