--- a/istio/labs/3rd_party_jwt_azure_ad/authz.yaml
+++ b/istio/labs/3rd_party_jwt_azure_ad/authz.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: helloworld
+      app: helloworld #update lables
   action: ALLOW
   rules:
   - from:
